# health-checker-mcp

./: LICENSE  README.md  nx.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
apps/api-python/: README.md  main.py  mcp_server.py  project.json  pyproject.toml
apps/ios-app/: Package.resolved  Package.swift  project.json
apps/ios-app/Sources/HealthCheckerApp/: HealthDataManager.swift  MCPClient.swift  info.plist  main.swift
apps/ios-app/Sources/HealthCheckerApp/Views/: SendNowView.swift
apps/ios-app/Tests/HealthCheckerAppTests/: tests.swift
apps/ios-app/ios-app/: HealthData.swift  MCPClient.swift  MyApp.swift  info.plist
apps/ios-app/ios-app.xcodeproj/: project.pbxproj
apps/ios-app/ios-app.xcodeproj/project.xcworkspace/xcuserdata/sychoi.xcuserdatad/: UserInterfaceState.xcuserstate
apps/ios-app/ios-app/Views/: BackgroundSyncHelpView.swift
apps/ios-app/ios-appTests/: ios_appTests.swift
apps/mcp-shim/: package-lock.json  package.json  project.json
apps/mcp-shim/src/: index.js
ios-app/: ContentView.swift  MyApp.swift  info.plist  ios_appApp.swift
ios-app.xcodeproj/: project.pbxproj
ios-app/Managers/: BackgroundTaskManager.swift  HealthDataManager.swift
ios-app/Models/: HealthData.swift  SleepSegment.swift
ios-app/Network/: MCPClient.swift
ios-app/Views/: HealthSyncView.swift  SendNowView.swift
ios-appUITests/: ios_appUITests.swift  ios_appUITestsLaunchTests.swift
