[project]
name = "api-python"
version = "0.1.0"
description = "Health Checker MCP Server API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
